# macrojazz

./: .build.yml  Cargo.toml  README.md  flake.nix
.github/: release.yml
.github/workflows/: ci.yml
.woodpecker/: .build.yml
src/: lib.rs  main.rs
src/builtin/: mod.rs
src/common/: context.rs  location.rs  mod.rs  report.rs  source.rs  types.rs
src/parser/: .mod.rs.rustfmt  ast.rs  mod.rs  token.rs
src/typing/: expr.rs  mod.rs  static_expr.rs  type_tree.rs  warnings.rs
src/typing/smt/: mod.rs
test/parser/bad/: 001.mj  002.mj  003.mj
test/parser/good/: 001.maj  001.mj
test/typer/good/: 001.maj  002.maj  003.maj
