[package]
name = "macrojazz"
authors = ["Constantin Gierczak--Galle"]
description = "A WIP compiler for a custom MiniJazz-based netlist decription language."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
ariadne = "0.1.5"
clap = { version = "3.2.14", features = ["derive"] }
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"
peg = "0.8.0"
yansi = "0.5.1"
smallvec = "1.9.0"
smallstr = "0.3.0"
