[package]
name = "macrojazz"
authors = ["Constantin Gierczak--Galle"]
description = "A WIP compiler for a custom MiniJazz-based netlist decription language."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
ariadne = "*"
clap = { version = "3.2.14", features = ["derive"] }
codemap = "*"
codemap-diagnostic = "*"
peg = "*"
yansi = "*"
smallvec = "*"
smallstr = "*"
z3 = {version="0.12", features = ["static-link-z3"]}
